[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menus/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/resources/light_b.png" type="Texture" id=2]
[ext_resource path="res://Menus/resources/bg.jpg" type="Texture" id=3]
[ext_resource path="res://Menus/resources/dark_w.png" type="Texture" id=4]
[ext_resource path="res://Menus/resources/btn_texture2.png" type="Texture" id=5]
[ext_resource path="res://new_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Menus/resources/Header_font.tres" type="DynamicFont" id=7]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="panel" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.492798
anchor_top = 0.447119
anchor_right = 0.492798
anchor_bottom = 0.527675
margin_left = -324.781
margin_top = -185.926
margin_right = 324.219
margin_bottom = 256.074
rect_min_size = Vector2( 0, 30 )
rect_clip_content = true
size_flags_vertical = 0
custom_constants/separation = 50
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Button" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_right = 649.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
rect_clip_content = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.5
margin_top = -45.0
margin_right = 201.5
margin_bottom = 45.0
custom_fonts/font = ExtResource( 6 )
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_top = 110.0
margin_right = 649.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 60 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Button2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.0
margin_top = -44.0
margin_right = 218.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 6 )
text = "Host Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_top = 220.0
margin_right = 649.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 60 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Button3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -43.785
margin_right = 130.0
margin_bottom = 43.785
custom_fonts/font = ExtResource( 6 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="store" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_top = 330.0
margin_right = 649.0
margin_bottom = 390.0
rect_min_size = Vector2( 0, 60 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/store"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -44.0
margin_right = 94.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 6 )
text = "Store"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_top = 440.0
margin_right = 649.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 60 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/stats"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.5
margin_top = -44.0
margin_right = 97.5
margin_bottom = 44.0
custom_fonts/font = ExtResource( 6 )
text = "Stats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -196.5
margin_right = 196.5
margin_bottom = 80.0
custom_fonts/font = ExtResource( 7 )
text = "WarZone II"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/store" to="." method="_on_store_pressed"]
[connection signal="pressed" from="VBoxContainer/stats" to="." method="_on_stats_pressed"]
